# hl_mai_lab_02

./: .gitignore  CMakeLists.txt  commands.sql  index.yaml  main.cpp  readme.md  start.sh  techstack.md  techstack.yml
config/: config.cpp
content/: index.html
database/: author.cpp  author.h  database.cpp  database.h  message.cpp  message.h  user.cpp
docker/: README.md  docker-compose.yml
docker/my_service/: Dockerfile
docker/mysql/: Dockerfile
docker/proxysql/: Dockerfile
web_server/: http_request_factory.h  http_web_server.h
web_server/handlers/: author_handler.h  message_handler.h  user_handler.h  web_page_handler.h
